tests/ui/parser/closure-return-syntax.stderr
error: expected `{`, found `22`
  --> $DIR/closure-return-syntax.rs:5:23
   |
LL |     let x = || -> i32 22;
   |                       ^^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |     let x = || -> i32 { 22 };
   |                       +    +

error: expected `{`, found `(`
  --> $DIR/closure-return-syntax.rs:12:34
   |
LL |         let x = || -> (i32, i32) (1, 2);
   |                                  ^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |         let x = || -> (i32, i32) { (1, 2) };
   |                                  +        +

error: expected `{`, found `[`
  --> $DIR/closure-return-syntax.rs:17:32
   |
LL |         let c = || -> [i32; 2] [1, 2];
   |                                ^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |         let c = || -> [i32; 2] { [1, 2] };
   |                                +        +

error: aborting due to 3 previous errors

